--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -89,7 +89,7 @@ In this paper, we are going to discuss the case in which the inputs are drawn fr
 
 \section{Holding The Universe}
 Let us describe a point of view for the set distjoiness problem: we are going to hold a universe $U \subseteq [n]$. The universe is the set of indexes we do care about them e.g the indexes where there might be a intersection over the inputs (maintaining $\bigcap_i x_i \subseteq U$). Set Distjointness problem asks whether $\bigcap_i x_i = \emptyset$ but knowing $\bigcap_i x_i \subseteq U$, says we can easily consider only the question whether $(\bigcap_i x_i) \cap U = \emptyset$. The protocol is going to act in rounds where in each round it \emph{reveals indexes} which don't hold an intersection and get rid of them (thus reducing the universe's size). Such indexes are the indexes which some player has 0 on them. The protocol is going to focus about revealing zeros in the players' input efficiently. \newline
-\subsection{Simple Case} 
+\subsection{Revealing Zeros} 
 Let us first examine a protocol which helps a single player to reveal many zeros using small communication.
 \begin{lemma}
     For $A \subseteq [n] $, $k$ players, where player $i$ holds the set $A_i$. Also $|A_i| \leq \frac{|A|}{n^{1/k}}, A_i \subseteq A$. There is a protocol that reveals $\frac{n^{1/k}}{2}$ zeros and costs $log{n}$. 
@@ -99,28 +99,8 @@ Let us first examine a protocol which helps a single player to reveal many zeros
     Since the division is public, player $i$ simply sends $j$ to the other players. Every player understands $B_j$ and know that $A_i \cap B_j = \emptyset$. 
     The only communication used is $j \in [n]$, therefore $log{n}$. 
 \end{proof}
-\section{$O(kn^{1-1/k})$-Bit Protocol}
-\subsection{Sequential Point Of View}
-We are going to consider a sequential point of view for the disjointness problem for k players. Let us imagine a process in which we start with the set of all points ([n]). The players go one after another and intersect their sets with the result. After the last player plays, we end up with the intersection of all sets. Therefore our question is whether this set is empty or not. Moreover, if the last set is empty, one of the players must have subtracted a large amount of elements in this process. We use this fact in order to learn large amount of elements which are not in this player's input. Those elements could not be in the intersection of all of the inputs, so we can ignore them from now on. 
-\subsection{Notations}
-\Rnote{Not touching this for now}
-We use the popular notation: We are going to have $k$ players. For $i \in [k], X_i \in \{0,1\}^{n}$ - the $i$'th player's input. Sometimes we are going to think of $X_i$ as a subset of $[n]$ where $X_i = \{j \in [n] | X_{ij} = 1\}$. In this notation, the distjointness problem is to decide whether $\cap^{k}_{j=1}X_j = \emptyset$. \newline
-
-\subsection{Overview of the Protocol}
-Throughout the protocol, we maintain a \emph{universe}, $U \subseteq [n]$,
-with the property that $\bigcap_i x_i \subseteq U$.
-We initially have $U = [n]$.
-The protocol operates in \emph{iterations}, where each iteration has two possible outcomes:
-\begin{enumerate}[I.]
-  \item We eliminate at least a $1/\Theta(|U|^{1/k})$-fraction of elements from $U$, or
-  \item We halt and guess that $\bigcap_i x_i \neq \emptyset$. This guess is correct with high probability over the inputs.
-\end{enumerate}
-After at most $n^{1 - 1/k}$ iterations, if we have not yet halted,
-then $U = \emptyset$, and at this point we announce that $\bigcap_i x_i = \emptyset$.
-
-\subsection{Reducing the Universe Size}
-To reduce the size of the universe, we look for a player whose input rules out many elements from being in the intersection,
-without communicating a lot.
+\section{Sequential Point Of View}
+We are going to consider a sequential point of view for the disjointness problem for k players. Let us imagine a process in which we start with the set of all points ([n]). The players go one after another and intersect their sets with the result. After the last player plays, we end up with the intersection of all sets. Therefore our question is whether this set is empty or not. Moreover, if the last set is empty, one of the players must have subtracted a large amount of elements in this process. Finding this player helps us in order to reveal large amount of zeros in this player's input.
 
 Define sets $[n] = A_0 \supseteq A_1 \supseteq \ldots \supseteq A_k$, as follows:
 for each $i = 1,\ldots,k$,
@@ -133,8 +113,6 @@ Our goal in the $\prob{Disj}$ problem is to determine whether or not $A_k = \emp
 \paragraph{Critical players.}
 We claim that if $\bigcap_i x_i = \emptyset$, then there is at least one player $i$ such that $A_i$ is significantly smaller than $A_{i - 1}$;
 in other words, $x_i$ eliminates a significant fraction of elements from consideration.
-
-\TODO{decide how this lemma should be written}
 \begin{lemma}
     Let there be a universe $U \subseteq [N]$ ($U \neq \emptyset$). Denote $n = |U|$. \newline
   If $\bigcap_i x_i = \emptyset$,
@@ -187,43 +165,7 @@ in other words, $x_i$ eliminates a significant fraction of elements from conside
 \end{proof}
 
 We say that player $i$ is \emph{critical} in $U_r$ if $i$ satisfies the conditions of the lemma.
-If player $i$ is critical, then it can efficiently communicate many elements that are not in $A_i$, as shown
-by the following simple counting argument:
-\begin{lemma}
-  Let $Y,Z \subseteq U$ be sets such that $Y \cap Z \neq \emptyset$ and
-  \begin{equation*}
-    |Y \cap Z| < \frac{|Y|}{n^{1/k}}.
-  \end{equation*}
-  Let
-  \begin{equation*}
-    m = \left\lfloor \frac{2|Y|}{n^{1/k}} \right\rfloor.
-  \end{equation*}
-  Partition the first $m \cdot (n^{1/k}/2)$ elements of $Y$ into sets $Y_1,\ldots,Y_m$,
-  each of size $n^{1/k}/2$.
-  Then there is some $j \in [m]$ such that $Y_j \cap Z = \emptyset$.
-  \label{lemma:reduce}
-\end{lemma}  
-\begin{proof}
-  Suppose for the sake of contradiction that $Y_j \cap Z \neq \emptyset$ for each $j = 1,\ldots,m$.
-  Since the $Y_j$'s are disjoint,
-  and $Y_1,\ldots,Y_j \subseteq Y$,
-  this means that $|Y \cap Z| \geq m$.
-  Thus,
-  \begin{equation*}
-    |Y \cap Z| \geq m = \left\lfloor \frac{2|Y|}{n^{1/k}} \right\rfloor
-    \geq
-    2\frac{|Y|}{n^{1/k}} - 1.
-  \end{equation*}
-  By assumption, we have $1 \leq |Y \cap Z| < |Y| / n^{1/k}$.
-  This implies that
-  \begin{equation*}
-    \frac{2|Y|}{n^{1/k}} - 1 > \frac{|Y|}{n^{1/k}}.
-  \end{equation*}
-  Together, we have that $|Y \cap Z| > |Y| / n^{1/k}$, a contradiction.
-\end{proof}
-The lemma shows that if $i$ is critical, then by communicating the index $j$ of the set $Z_j$ such that $Z_j \cap x_i = \emptyset$,
-we can remove at least $n^{1/k}/2$ elements from consideration.
-
+\paragraph{Significant Players}
 Note that a player does not know whether it is critical or not, as this depends 
 on the other players' inputs;
 but each player can compute the \emph{probability} that it is critical, given its input.
@@ -233,6 +175,28 @@ let
   \gamma_i \coloneq \Pr_{(\rv{X}_1,\ldots,\rv{X}_k) \sim \mu}\left[ \text{ $i$ is critical} \land \bigcap_i \rv{X}_i = \emptyset \given \rv{X}_i = x_i \right].
 \end{equation*}
 We say that player $i$ is \emph{significant} if $\gamma_i \geq \eps / k$.
+
+
+\section{$O(kn^{1-1/k})$-Bit Protocol}
+\subsection{Notations}
+\Rnote{Not touching this for now}
+We use the popular notation: We are going to have $k$ players. For $i \in [k], X_i \in \{0,1\}^{n}$ - the $i$'th player's input. Sometimes we are going to think of $X_i$ as a subset of $[n]$ where $X_i = \{j \in [n] | X_{ij} = 1\}$. In this notation, the distjointness problem is to decide whether $\cap^{k}_{j=1}X_j = \emptyset$. \newline
+
+\subsection{Overview of the Protocol}
+Throughout the protocol, we maintain a \emph{universe}, $U \subseteq [n]$,
+with the property that $\bigcap_i x_i \subseteq U$.
+We initially have $U = [n]$.
+The protocol operates in \emph{iterations}, where each iteration has two possible outcomes:
+\begin{enumerate}[I.]
+  \item We eliminate at least a $1/\Theta(|U|^{1/k})$-fraction of elements from $U$, or
+  \item We halt and guess that $\bigcap_i x_i \neq \emptyset$. This guess is correct with high probability over the inputs.
+\end{enumerate}
+After at most $n^{1 - 1/k}$ iterations, if we have not yet halted,
+then $U = \emptyset$, and at this point we announce that $\bigcap_i x_i = \emptyset$.
+
+\subsection{Reducing the Universe Size}
+To reduce the size of the universe, we look for a player whose input rules out many elements from being in the intersection,
+without communicating a lot.
 
 \subsection{The Protocol}
 For a given product distribution $\mu : \left(\set{0,1}^N\right)^k \rightarrow [0,1]$, we describe a protocol that errs with probability $\epsilon$.
