--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -81,26 +81,25 @@
 
 
 \section{Introduction}
-The world of communication complexity discuss the settings in which there are many nodes (sometimes called players). Each node has its own input. The goal is to find a protocol in which the nodes calculate a function over the whole input (e.g all of the nodes' inputs) together using minimum communication. \newline
+The world of communication complexity discusses the settings in which there are many nodes (sometimes called players). Each node has its own input. For a given function, the goal is to design a protocol in which the nodes calculate the function over the whole input (e.g all of the nodes' inputs) together using minimum communication. \newline
 In this world, one of the most important problems (sometimes called "mother of problems") is the Set Disjointness problem. In this problem, every node gets a n-bit array and they are asked whether there is an index $i$ where the $i$'th bit is turned on in all of their inputs. \newline
 There are many different settings in which this protocol can be made. The communication between players can be broadcast (shared blackboard model) or unicast (the coordinator). Moreover, the protocol may use randomness or not. The inputs of the players may be drawn using a distribution and in this case we can ask what is the expected error over this distribution (instead of worst case for each input). \newline
-In this paper, we are going to discuss the case in which the inputs are drawn from a product distribution. In this case the inputs are independent and we are asked to design a protocol which doesn't error typically. \newline
-
-
+In this paper, we are going to discuss the case in which the inputs are drawn from a product distribution. In this case the inputs are independent and we are asked to design a protocol which doesn't error typically. 
 \section{Holding The Universe}
-Let us describe a point of view for the set distjoiness problem: we are going to hold a universe $U \subseteq [n]$. The universe is the set of indexes we do care about them e.g the indexes where there might be a intersection over the inputs (maintaining $\bigcap_i x_i \subseteq U$). Set Distjointness problem asks whether $\bigcap_i x_i = \emptyset$ but knowing $\bigcap_i x_i \subseteq U$, says we can easily consider only the question whether $(\bigcap_i x_i) \cap U = \emptyset$. The protocol is going to act in rounds where in each round it \emph{reveals indexes} which don't hold an intersection and get rid of them (thus reducing the universe's size). Such indexes are the indexes which some player has 0 on them. The protocol is going to focus about revealing zeros in the players' input efficiently. \newline
+Let us describe a point of view for the set distjoiness problem: we are going to hold a universe $U \subseteq [n]$. The universe is the set of indexes we do care about them e.g the indexes where there might be a intersection over the inputs (maintaining $\bigcap_i x_i \subseteq U$). Set Distjointness problem asks whether $\bigcap_i x_i = \emptyset$ but knowing $\bigcap_i x_i \subseteq U$, says we can easily consider only the question whether $(\bigcap_i x_i) \cap U = \emptyset$. The protocol is going to act in rounds where in each round it \emph{reveals indexes} which don't hold an intersection and get rid of them (thus reducing the universe's size). Such indexes are the indexes which some player has 0 on them. Therefore the protocol is going to focus about revealing zeros in the players' input efficiently. \newline
 \subsection{Revealing Zeros} 
-Let us first examine a protocol which helps a single player to reveal many zeros using small communication.
+Let us first examine a protocol which helps a single player to reveal many zeros using small communication in a specific scenario. Later on we describe how this scenario is created.
 \begin{lemma}
-    For $A \subseteq [n] $, $k$ players, where player $i$ holds the set $A_i$. Also $|A_i| \leq \frac{|A|}{n^{1/k}}, A_i \subseteq A$. There is a protocol that reveals $\frac{n^{1/k}}{2}$ zeros and costs $log{n}$. 
+    For a settings where there is a set $A \subseteq [N] $, $k$ players (which know $A$), and player $i$ holds a set $A_i$ which $|A_i| \leq \frac{|A|}{n^{1/k}}, A_i \subseteq A$. There is a protocol that reveals $\frac{n^{1/k}}{2}$ zeros and costs $log(n)$. 
 \end{lemma}
 \begin{proof}
     Let us divide $A$ to $|A_i| + 1$ groups sized $\frac{n^{1/k}}{2}$: $B_1, B_2, ...$. (It is possible since $(|A_i| + 1)(\frac{n^{1/k}}{2}) \leq |A|$). Due to the pigeonhole principle, there is a group $B_j$ which is disjoint to $A_i$. \newline
     Since the division is public, player $i$ simply sends $j$ to the other players. Every player understands $B_j$ and know that $A_i \cap B_j = \emptyset$. 
-    The only communication used is $j \in [n]$, therefore $log{n}$. 
+    The only communication used is $j \in [|A_i|] \subseteq [n]$, therefore $log(n)$. 
 \end{proof}
 \section{Sequential Point Of View}
-We are going to consider a sequential point of view for the disjointness problem for k players. Let us imagine a process in which we start with the set of all points ([n]). The players go one after another and intersect their sets with the result. After the last player plays, we end up with the intersection of all sets. Therefore our question is whether this set is empty or not. Moreover, if the last set is empty, one of the players must have subtracted a large amount of elements in this process. Finding this player helps us in order to reveal large amount of zeros in this player's input.
+In order to find a player with some zeros, we are going to think about set disjointness a little differently. 
+We are going to consider a sequential point of view. Let us imagine a process in which we start with the set of all points ([n]). We consider the inputs of the players one after another and intersect their inputs with the result. After intersecting with the last player's set, we end up with the intersection of all sets. Therefore our question is whether this set is empty or not. Moreover, if the last set is empty, one of the players must have subtracted a large amount of elements in this process. Finding this player helps us in order to reveal large amount of zeros in this player's input.
 
 Define sets $[n] = A_0 \supseteq A_1 \supseteq \ldots \supseteq A_k$, as follows:
 for each $i = 1,\ldots,k$,
