--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -90,12 +90,12 @@ Let us describe a point of view for the set distjoiness problem: we are going to
 \subsection{Revealing Zeros} 
 Let us first examine a protocol which helps a single player to reveal many zeros using small communication in a specific scenario. Later on we describe how this scenario is created.
 \begin{lemma}
-    For a settings where there is a set $A \subseteq [N] $, $k$ players (which know $A$), and player $i$ holds a set $A_i$ which $|A_i| \leq \frac{|A|}{n^{1/k}}, A_i \subseteq A$. There is a protocol that reveals $\frac{n^{1/k}}{2}$ zeros and costs $log(n)$. 
+    For a settings where there is a set $A \subseteq [N] $, $k$ players (which know $A$) and player $i$ holds a set $A_i$. Define $n = |A|$. If $|A_i| \leq \frac{|A|}{n^{1/k}}, A_i \subseteq A$. There is a deterministic protocol that reveals a set $B \subseteq A \setminus A_i$ and $|B| = \frac{n^{1/k}}{2}$ and costs $klog(n)$ bits of communication (using the coordinator settings). 
 \end{lemma}
 \begin{proof}
-    Let us divide $A$ to $|A_i| + 1$ groups sized $\frac{n^{1/k}}{2}$: $B_1, B_2, ...$. (It is possible since $(|A_i| + 1)(\frac{n^{1/k}}{2}) \leq |A|$). Due to the pigeonhole principle, there is a group $B_j$ which is disjoint to $A_i$. \newline
+    Let us divide $A$ to groups sized $\frac{n^{1/k}}{2}$: $B_1, B_2, ...$. This is a division that every player knows since they all have $A, k$. Pay attention that there are more than $|A_i|$ groups since since $|A_i|(\frac{n^{1/k}}{2}) < |A_i|(n^{1/k}) \leq |A|$. Due to the pigeonhole principle, there is a group $B_j$ which is disjoint to $A_i$. \newline
     Since the division is public, player $i$ simply sends $j$ to the other players. Every player understands $B_j$ and know that $A_i \cap B_j = \emptyset$. 
-    The only communication used is $j \in [|A_i|] \subseteq [n]$, therefore $log(n)$. 
+    The only communication used is $j \in [|A_i|] \subseteq [n]$, therefore $klog(n)$. 
 \end{proof}
 \section{Sequential Point Of View}
 In order to find a player with some zeros, we are going to think about set disjointness a little differently. 
@@ -203,7 +203,7 @@ Our protocol uses public randomness and has $\tilde{O}(kN^{1-1/k})$ bits of expe
 
 Initially, $U = \set{1,\ldots,N}$, and $n = N$.
 \begin{enumerate}[(1)]
-  \item If $|U| \leq N^{1 - 1/k}$, each player $i$ sends $x_i$ to the coordinator, who computes and outputs the answer.
+  \item Termination Condition: If $|U| \leq N^{1 - 1/k}$, each player $i$ sends $x_i$ to the coordinator, who computes and outputs the answer. 
   \item Otherwise, the coordinator asks each player $i$ whether $i$ is significant (i.e., whether $\gamma_i \geq \eps / k$).
   \item If no player is significant, the coordinator outputs ``not disjoint''. Otherwise, let $i$ be the
     first significant player. The coordinator informs every player that player $i$ has been selected.
